--- a/fact2.html
+++ b/fact2.html
@@ -11,8 +11,8 @@
 <body>
     <h2>Dog Facts</h2>
     <hr>
-    <p>Dogs don't sweat like we do.</p>
-    <button>Back</button><button><a href="/fact1.html">Next</a></button>
+    <p>Dogs can sniff at the same time as breathing.</p>
+    <button><a href="/fact1.html">Back</a></button><button><a href="">Next</a></button>
 </body>
 
 </html>
