--- a/fact1.html
+++ b/fact1.html
@@ -11,8 +11,9 @@
 <body>
     <h2>Dog Facts</h2>
     <hr>
-    <p>Dogs don't sweat like we do.</p>
-    <button>Back</button><button><a href="/fact1.html">Next</a></button>
+    <p>Some have such good noses they can sniff out medical problems.
+    </p>
+    <button><a href="/index.html">Back</a></button><button><a href="/fact2.html">Next</a></button>
 </body>
 
 </html>
