--- a/fact3.html
+++ b/fact3.html
@@ -11,8 +11,8 @@
 <body>
     <h2>Dog Facts</h2>
     <hr>
-    <p>Dogs don't sweat like we do.</p>
-    <button>Back</button><button><a href="/fact1.html">Next</a></button>
+    <p>Some dogs are incredible swimmers.</p>
+    <button><a href="/fact2.html">Back</a></button><button><a href="/fact4.html">Next</a></button>
 </body>
 
 </html>
