--- a/fact4.html
+++ b/fact4.html
@@ -11,8 +11,8 @@
 <body>
     <h2>Dog Facts</h2>
     <hr>
-    <p>Dogs don't sweat like we do.</p>
-    <button>Back</button><button><a href="/fact1.html">Next</a></button>
+    <p>Some are fast and could even beat a cheetah!</p>
+    <button><a href="/fact3.html">Back</a></button><button><a href="/fact5.html">Next</a></button>
 </body>
 
 </html>
